| Bug #36310 | InnoDB plugin crash | ||
|---|---|---|---|
| Submitted: | 24 Apr 2008 8:11 | Modified: | 21 May 2008 22:05 |
| Reporter: | Venu Anuganti | ||
| Status: | Closed | ||
| Category: | Server: InnoDB | Severity: | S2 (Serious) |
| Version: | innodb_plugin-1.0.0 | OS: | Any |
| Assigned to: | Vasil Dimov | Target Version: | |
| Tags: | MySQL 5.1, InnoDB plugin | ||
[24 Apr 2008 8:11]
Venu Anuganti
[24 Apr 2008 16:17]
Vasil Dimov
Hi, I am coining a solution for this right now... I_S plugins should refuse to start if the "main" innodb storage engine plugin is not loaded.
[29 Apr 2008 17:30]
Vasil Dimov
Patch for this is ready - I_S plugins should not start if the main InnoDB storage engine is not started. I found http://bugs.mysql.com/36399 while working on this.
[29 Apr 2008 17:39]
Vasil Dimov
Patch committed. Will be present in the next plugin version.
[29 Apr 2008 17:42]
Venu Anuganti
Thanks for the immediate attention on the bug, we appreciate that.
[21 May 2008 22:05]
Calvin Sun
The fix is in 1.0.1 release.
